--- a/src/style.css
+++ b/src/style.css
@@ -10,9 +10,10 @@ form {
   font-family: "Oswald", sans-serif;
 }
 .container {
+  display:block
   border: 1px solid #dcdcdc;
   border-radius: 25px;
-  margin: 50px 50px;
+  margin: 0 auto;
   padding: 40px 40px 40px 40px;
   left: 50px;
 }
